# s3dm

./: .gitattributes  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  release.yml
crates/s3dm-config/: Cargo.toml
crates/s3dm-config/src/: lib.rs  settings.rs
crates/s3dm-core/: Cargo.toml
crates/s3dm-core/src/: client.rs  http.rs  lib.rs  types.rs
crates/s3dm-gui/: Cargo.toml
crates/s3dm-gui/icons/app/: icon.icns
crates/s3dm-gui/locales/: en.yml  zh-CN.yml  zh-TW.yml
crates/s3dm-gui/src/: app.rs  connection.rs  constants.rs  icon.rs  lib.rs  message.rs  preview.rs  update.rs  view.rs  view_buckets.rs  view_dialogs.rs  view_form.rs  view_left_panel.rs  view_objects.rs  view_settings.rs
packaging/: s3dm.desktop
src/: main.rs
