[workspace]
resolver = "2"
members = ["crates/s3dm-config", "crates/s3dm-core", "crates/s3dm-gui"]

[workspace.dependencies]
iced = { version = "0.14" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
aws-sdk-s3 = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
aws-smithy-types = "1.6"
s3dm-config = { path = "crates/s3dm-config" }
s3dm-core = { path = "crates/s3dm-core" }
s3dm-gui = { path = "crates/s3dm-gui" }
log = "0.4"
env_logger = "0.11"
rust-i18n = "4"
sys-locale = "0.3"

[package]
name = "s3dm"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { workspace = true }
s3dm-gui = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
