[package]
name = "s3dm-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { workspace = true, features = ["svg"] }
rfd = "0.15"
dirs = { workspace = true }
tokio = { workspace = true }
s3dm-core = { workspace = true }
s3dm-config = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
rust-i18n = { workspace = true }
sys-locale = { workspace = true }
