[package]
name = "s3dm-gui"
version.workspace = true
edition.workspace = true

[dependencies]
iced = { workspace = true, features = ["svg", "image", "tokio", "highlighter"] }
iced_highlighter = "0.14"
rfd = "0.15"
dirs = { workspace = true }
tokio = { workspace = true }
s3dm-core = { workspace = true }
s3dm-config = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
rust-i18n = { workspace = true }
sys-locale = { workspace = true }
